# SFML-ImGui_StartPoint

./: .gitignore  CMakeLists.txt
dependencies/: CMakeLists.txt
src/: Balls.cpp  Balls.hpp  CMakeLists.txt  ChatClient.hpp  ChatServer.hpp  Conways.cpp  Conways.hpp  Particles.hpp  RenderTexture.cpp  RenderTexture.hpp  main.cpp
src/Client/: CMakeLists.txt  ChatClient.hpp  main.cpp
src/Server/: CMakeLists.txt  ChatServer.hpp  main.cpp
